--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,22 +1,17 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        AppBundle\Entity\User: bcrypt
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-
-        our_db_provider:
-            entity:
-                class: AppBundle:User
-                property: username
-
-    encoders:
-            AppBundle\Entity\User:
-                algorithm: bcrypt
-                cost: 12
-            Symfony\Component\Security\Core\User\User: plaintext
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -24,27 +19,18 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-#        default:
-#            anonymous: ~
-#            http_basic: ~
-#            provider: our_db_provider
-
         main:
-            anonymous: ~
+            pattern: ^/
             form_login:
-               login_path: login
-               check_path: login
-               default_target_path: /admin
+                 provider: fos_userbundle
+                 login_path: /login
+                 check_path: /login_check
+                 csrf_token_generator: security.csrf.token_manager
+                 default_target_path: /admin
             logout:
-               path: logout
-               target: login
-            provider: our_db_provider
-
-    access_control:
-        # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_USER }
-
-
+                 path: /logout
+                 target: /login
+            anonymous: true
             # activate different ways to authenticate
 
             # http_basic: ~
@@ -52,3 +38,8 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+          - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/member, role: ROLE_USER }
+          - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
