--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+youth_convention_delegates:
+    resource: "@YouthConventionBundle/Resources/config/routing/delegates.yml"
+    prefix:   /delegates
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
