--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,5 +41,6 @@ security:
     access_control:
           - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/member, role: ROLE_USER }
+          - { path: ^/delegates, role: ROLE_USER }
           - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
